# source-interface-spotify

./: .cz.toml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
source-interface-spotify/: _version.py  interface.py
source_interface_spotify/: __init__.py  _version.py  interface.py
tests/: test_interface.py
