[tool.poetry]
name = "source_interface_spotify"
version = "1.1.1"
description = "Interface Package to get information from Spotify API. This is an installable package"
authors = ["Somesh Garje <someshgargje@gmail.com>"]
readme = "README.md"
packages = [
    { include = "source_interface_spotify" }
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.1"
version_files = [
    "pyproject.toml:^version"
]
bump_message = "bump: version $current_version → $new_version [skip-ci]"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
rauth = "^0.7.3"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
versioneer = "^0.21"
commitizen = "^2.22.0"
pre-commit = "^3.8.0"
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "source_interface_spotify/_version.py"
tag_prefix = ""
parentdir_prefix = "source_interface_spotify-"
